--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 
-
 vivado/
+
+design_1.bit
+design_1.hwh 
 
 #######################################################################################
 # Prerequisites
